// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BasicInfoEdit rendering tests BasicInfoEdit - empty - rendered test 1`] = `
<div>
  <section
    class="space-y-4"
    data-testid="basic-info-edit"
  >
    <h3
      class="text-lg font-semibold text-slate-900 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-type h-5 w-5 text-indigo-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13h4"
        />
        <path
          d="M12 6v7"
        />
        <path
          d="M16 8V6H8v2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      Allgemeine Informationen
    </h3>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="title"
    >
      <label
        class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700"
        data-error="false"
        data-slot="form-label"
        for="_r_0_-form-item"
      >
        Titel
      </label>
      <input
        aria-describedby="_r_0_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        id="_r_0_-form-item"
        name="title"
        placeholder="Prompt-Titel eingeben..."
        value=""
      />
    </div>
    <div
      class="gap-2 flex flex-col"
      data-slot="form-item"
      data-testid="recommended-model"
    >
      <label
        class="select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700 flex items-center gap-1.5"
        data-error="false"
        data-slot="form-label"
        for="_r_1_-form-item"
      >
        Empfohlenes Modell
      </label>
      <button
        aria-controls="radix-_r_2_"
        aria-describedby="_r_1_-form-item-description"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-state="closed"
        data-testid="recommended-model-trigger-btn"
        id="_r_1_-form-item"
        role="combobox"
        type="button"
      >
        Modell auswählen...
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-presence"
      >
        <div
          data-testid="mock-react-portal"
        >
          <div
            data-testid="mock-react-presence"
          >
            <div
              data-radix-popper-content-wrapper=""
              style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0% 0px;"
            >
              <div
                class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border shadow-md outline-hidden w-full p-0"
                data-align="start"
                data-side="bottom"
                data-slot="popover-content"
                data-state="closed"
                id="radix-_r_2_"
                role="dialog"
                style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
                tabindex="-1"
              >
                <div
                  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                  cmdk-root=""
                  data-slot="command"
                  tabindex="-1"
                >
                  <label
                    cmdk-label=""
                    for="radix-_r_5_"
                    id="radix-_r_4_"
                    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                  />
                  <div
                    class="flex h-9 items-center gap-2 border-b px-3"
                    data-slot="command-input-wrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-search size-4 shrink-0 opacity-50"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21 21-4.34-4.34"
                      />
                      <circle
                        cx="11"
                        cy="11"
                        r="8"
                      />
                    </svg>
                    <input
                      aria-autocomplete="list"
                      aria-controls="radix-_r_3_"
                      aria-expanded="true"
                      aria-labelledby="radix-_r_4_"
                      autocomplete="off"
                      autocorrect="off"
                      class="placeholder:text-muted-foreground flex h-10 w-full rounded-md bg-transparent py-3 text-sm outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
                      cmdk-input=""
                      data-slot="command-input"
                      data-testid="model-input"
                      id="radix-_r_5_"
                      placeholder="Modell suchen oder eingeben..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    aria-label="Suggestions"
                    class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                    cmdk-list=""
                    data-slot="command-list"
                    id="radix-_r_3_"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      cmdk-list-sizer=""
                    >
                      <div
                        class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                        cmdk-group=""
                        data-slot="command-group"
                        data-value="undefined"
                        role="presentation"
                      >
                        <div
                          cmdk-group-items=""
                          role="group"
                        >
                          <div
                            aria-disabled="false"
                            aria-selected="true"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="true"
                            data-slot="command-item"
                            data-value="Claude Sonnet 4.5"
                            id="radix-_r_8_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Claude Sonnet 4.5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Claude Opus 4"
                            id="radix-_r_9_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Claude Opus 4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-4"
                            id="radix-_r_a_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-4 Turbo"
                            id="radix-_r_b_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-4 Turbo
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-3.5"
                            id="radix-_r_c_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-3.5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Gemini Pro"
                            id="radix-_r_d_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Gemini Pro
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Gemini Ultra"
                            id="radix-_r_e_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Gemini Ultra
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Llama 3"
                            id="radix-_r_f_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Llama 3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Mistral Large"
                            id="radix-_r_g_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Mistral Large
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
      data-testid="categories"
    >
      <label
        class="select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700 flex items-center gap-1.5"
        data-error="false"
        data-slot="form-label"
        for="undefined-form-item"
      >
        Kategorien
      </label>
      <div
        class="space-y-2"
      >
        <div
          class="flex gap-2"
        >
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1"
            data-slot="input"
            name="categories.0"
            placeholder="Kategoriename eingeben"
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-category-btn-0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex justify-end"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          data-testid="add-category-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Hinzufügen
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`BasicInfoEdit rendering tests BasicInfoEdit - with data - rendered test 1`] = `
<div>
  <section
    class="space-y-4"
    data-testid="basic-info-edit"
  >
    <h3
      class="text-lg font-semibold text-slate-900 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-type h-5 w-5 text-indigo-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13h4"
        />
        <path
          d="M12 6v7"
        />
        <path
          d="M16 8V6H8v2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      Allgemeine Informationen
    </h3>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="title"
    >
      <label
        class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700"
        data-error="false"
        data-slot="form-label"
        for="_r_h_-form-item"
      >
        Titel
      </label>
      <input
        aria-describedby="_r_h_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        id="_r_h_-form-item"
        name="title"
        placeholder="Prompt-Titel eingeben..."
        value="Test Title"
      />
    </div>
    <div
      class="gap-2 flex flex-col"
      data-slot="form-item"
      data-testid="recommended-model"
    >
      <label
        class="select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700 flex items-center gap-1.5"
        data-error="false"
        data-slot="form-label"
        for="_r_i_-form-item"
      >
        Empfohlenes Modell
      </label>
      <button
        aria-controls="radix-_r_j_"
        aria-describedby="_r_i_-form-item-description"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-state="closed"
        data-testid="recommended-model-trigger-btn"
        id="_r_i_-form-item"
        role="combobox"
        type="button"
      >
        Claude Sonnet 4.5
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-presence"
      >
        <div
          data-testid="mock-react-portal"
        >
          <div
            data-testid="mock-react-presence"
          >
            <div
              data-radix-popper-content-wrapper=""
              style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0% 0px;"
            >
              <div
                class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border shadow-md outline-hidden w-full p-0"
                data-align="start"
                data-side="bottom"
                data-slot="popover-content"
                data-state="closed"
                id="radix-_r_j_"
                role="dialog"
                style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
                tabindex="-1"
              >
                <div
                  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                  cmdk-root=""
                  data-slot="command"
                  tabindex="-1"
                >
                  <label
                    cmdk-label=""
                    for="radix-_r_m_"
                    id="radix-_r_l_"
                    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                  />
                  <div
                    class="flex h-9 items-center gap-2 border-b px-3"
                    data-slot="command-input-wrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-search size-4 shrink-0 opacity-50"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21 21-4.34-4.34"
                      />
                      <circle
                        cx="11"
                        cy="11"
                        r="8"
                      />
                    </svg>
                    <input
                      aria-autocomplete="list"
                      aria-controls="radix-_r_k_"
                      aria-expanded="true"
                      aria-labelledby="radix-_r_l_"
                      autocomplete="off"
                      autocorrect="off"
                      class="placeholder:text-muted-foreground flex h-10 w-full rounded-md bg-transparent py-3 text-sm outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
                      cmdk-input=""
                      data-slot="command-input"
                      data-testid="model-input"
                      id="radix-_r_m_"
                      placeholder="Modell suchen oder eingeben..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    aria-label="Suggestions"
                    class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                    cmdk-list=""
                    data-slot="command-list"
                    id="radix-_r_k_"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      cmdk-list-sizer=""
                    >
                      <div
                        class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                        cmdk-group=""
                        data-slot="command-group"
                        data-value="undefined"
                        role="presentation"
                      >
                        <div
                          cmdk-group-items=""
                          role="group"
                        >
                          <div
                            aria-disabled="false"
                            aria-selected="true"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="true"
                            data-slot="command-item"
                            data-value="Claude Sonnet 4.5"
                            id="radix-_r_p_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-100"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Claude Sonnet 4.5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Claude Opus 4"
                            id="radix-_r_q_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Claude Opus 4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-4"
                            id="radix-_r_r_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-4 Turbo"
                            id="radix-_r_s_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-4 Turbo
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="GPT-3.5"
                            id="radix-_r_t_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            GPT-3.5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Gemini Pro"
                            id="radix-_r_u_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Gemini Pro
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Gemini Ultra"
                            id="radix-_r_v_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Gemini Ultra
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Llama 3"
                            id="radix-_r_10_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Llama 3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-selected="false"
                            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                            cmdk-item=""
                            data-disabled="false"
                            data-selected="false"
                            data-slot="command-item"
                            data-value="Mistral Large"
                            id="radix-_r_11_"
                            role="option"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M20 6 9 17l-5-5"
                              />
                            </svg>
                            Mistral Large
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
      data-testid="categories"
    >
      <label
        class="select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-slate-700 flex items-center gap-1.5"
        data-error="false"
        data-slot="form-label"
        for="undefined-form-item"
      >
        Kategorien
      </label>
      <div
        class="space-y-2"
      >
        <div
          class="flex gap-2"
        >
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1"
            data-slot="input"
            name="categories.0"
            placeholder="Kategoriename eingeben"
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-category-btn-0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-2"
        >
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1"
            data-slot="input"
            name="categories.1"
            placeholder="Kategoriename eingeben"
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 shrink-0 hover:bg-red-50 hover:text-red-600 hover:border-red-300"
            data-slot="button"
            data-testid="remove-category-btn-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex justify-end"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          data-testid="add-category-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Hinzufügen
        </button>
      </div>
    </div>
  </section>
</div>
`;
